--- a/SchoolWhatsApp/client/index.html
+++ b/SchoolWhatsApp/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>School SMS Sender - Student Management Platform</title>
+    <title>AKT MEMORIAL MATRIC GIRLS SCHOOL MESSAGE SENDER PLATFORM</title>
     <meta name="description" content="Complete school management platform with SMS messaging integration. Manage students, send SMS messages, and export data efficiently." />
     
     <!-- Open Graph tags -->
